# news_channel

./: .gitignore  create_bot.py  main.py  pyproject.toml
data/: __init__.py  models.py  models_amur.py  models_zab.py  orm.py
handlers/: h_admin.py
keyboards/: kb_admin.py
utils/: parsers.py
utils/zab_news/: pars_zab.py
