[tool.poetry]
name = "news-channel"
version = "0.1.0"
description = ""
authors = ["mixalych <mixalych06@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.2.0"
SQLAlchemy = "^2.0.23"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
fake-useragent = "^1.4.0"
xlml = "^0.1.2"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
